Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test16.java
/* Test 16
 * @ Objetivo: Detectar que falta el bloque o la sentencia correspondiente 
 * al while 
 */
class clase
{
	dynamic void metodo(){
	varinst int x;	
	x = 0;
	while(x < 10)
	
	
	}
}
